Balance several Rune Saga boon effects

--- a/games/runesaga.html
+++ b/games/runesaga.html
@@ -924,7 +924,7 @@ const BOONS=[
   {id:'guard_mark',name:"Guardian's Mark",rarity:'uncommon',tags:['Bulwark','Sustain'],icon:'✨',desc:'+45 Max HP, +10 Defense.',effects:[{t:'stat',s:'maxHP',v:45},{t:'stat',s:'hp',v:45},{t:'stat',s:'def',v:10}]},
 
   {id:'necrotic',name:'Corpse-Rot',rarity:'rare',tags:['Poison'],icon:'🧟',desc:'Each Poison stack reduces enemy DEF by 3.',effects:[{t:'passive',k:'necroticPoison',v:3}]},
-  {id:'vanguard',name:'Vanguard',rarity:'rare',tags:['Bulwark','Shield'],icon:'🛡',desc:'Taking damage grants 10 Shield.',effects:[{t:'onDmg',ef:'shield',amt:10}]},
+  {id:'vanguard',name:'Vanguard',rarity:'rare',tags:['Bulwark','Shield'],icon:'🛡',desc:'Taking HP damage grants 8 Shield.',effects:[{t:'onDmg',ef:'shield',amt:8}]},
   {id:'rampage',name:'Rampage',rarity:'rare',tags:['Execute','Tempo'],icon:'😤',desc:'Each kill grants +7 ATK (this battle).',effects:[{t:'onKill',ef:'tempStat',s:'atk',v:7}]},
   {id:'soul_rend',name:'Spirit Rend',rarity:'rare',tags:['Arcane'],icon:'👻',desc:'22% of damage bypasses enemy Defense.',effects:[{t:'passive',k:'defpen',v:.22}]},
   {id:'overwhelming',name:'Crusher',rarity:'rare',tags:['Crit','Arcane'],icon:'💪',desc:'Crits ignore 55% of enemy Defense.',effects:[{t:'passive',k:'critDefpen',v:.55}]},
@@ -941,18 +941,18 @@ const BOONS=[
   {id:'undying',name:'Undying',rarity:'epic',tags:['Sustain'],icon:'🔄',desc:'Once per battle, revive with 35% HP.',effects:[{t:'passive',k:'undying',v:true}]},
 
   {id:'chain_lightning',name:"Thor's Lash",rarity:'legendary',tags:['Arcane','Tempo'],icon:'⚡',desc:'Crits splash 55% dmg to a random other enemy.',effects:[{t:'onCrit',ef:'splash',v:.55}]},
-  {id:'eternal_hunger',name:'Eternal Hunger',rarity:'legendary',tags:['Sustain','Execute'],icon:'🌑',desc:'+30% Lifesteal. Overhealing becomes Shield.',effects:[{t:'stat',s:'lifesteal',v:.30},{t:'passive',k:'overhealShield',v:true}]},
+  {id:'eternal_hunger',name:'Eternal Hunger',rarity:'legendary',tags:['Sustain','Execute'],icon:'🌑',desc:'+18% Lifesteal. Overhealing becomes Shield (60%, capped per battle).',effects:[{t:'stat',s:'lifesteal',v:.18},{t:'passive',k:'overhealShield',v:true}]},
 
   {id:'ax_opening',name:'RUNE: First Blood',rarity:'axiom',tags:['Axiom','Crit'],icon:'💫',desc:'First hit each battle always crits.',effects:[{t:'passive',k:'axiomOpen',v:true}]},
-  {id:'ax_aegis',name:'RUNE: Shield Law',rarity:'axiom',tags:['Axiom','Shield','Sustain'],icon:'💎',desc:'Overhealing becomes Shield.',effects:[{t:'passive',k:'overhealShield',v:true}]},
+  {id:'ax_aegis',name:'RUNE: Shield Law',rarity:'axiom',tags:['Axiom','Shield','Sustain'],icon:'💎',desc:'Overhealing becomes Shield (60%, capped per battle).',effects:[{t:'passive',k:'overhealShield',v:true}]},
   {id:'ax_crimson',name:'RUNE: Crimson Law',rarity:'axiom',tags:['Axiom','Bleed'],icon:'🩸',desc:'Applying Bleed also applies Weak.',effects:[{t:'passive',k:'axiomCrimson',v:true}]},
   {id:'ax_ghost',name:'RUNE: Shade-Step',rarity:'axiom',tags:['Axiom','Tempo'],icon:'👻',desc:'When you dodge, gain +2 Tempo stacks.',effects:[{t:'onDodge',ef:'status',st:'tempo',sk:2,dur:9999}]},
   {id:'ax_echo',name:'RUNE: Echo Strike',rarity:'axiom',tags:['Axiom','Tempo'],icon:'🔁',desc:'Every 4th attack repeats at 40% power.',effects:[{t:'passive',k:'axiomEcho',v:4}]},
   {id:'ax_iron_law',name:'RUNE: Iron Law',rarity:'axiom',tags:['Axiom','Bulwark'],icon:'⚖',desc:'20% of your Defense adds to Attack (max +12).',effects:[{t:'passive',k:'axiomIronLaw',v:.20}]},
-  {id:'ax_harvest',name:'RUNE: Death Harvest',rarity:'axiom',tags:['Axiom','Sustain'],icon:'⚗',desc:'Kills restore 20% Max HP.',effects:[{t:'onKill',ef:'healPct',v:.20}]},
+  {id:'ax_harvest',name:'RUNE: Death Harvest',rarity:'axiom',tags:['Axiom','Sustain'],icon:'⚗',desc:'Kills restore 12% Max HP.',effects:[{t:'onKill',ef:'healPct',v:.12}]},
   {id:'ax_wrath',name:'RUNE: Berserkr Law',rarity:'axiom',tags:['Axiom','Crit'],icon:'🔥',desc:'Crits grant Rage stacks (+3 ATK each, max 15).',effects:[{t:'onCrit',ef:'status',st:'rage',sk:1,dur:9999,mx:15}]},
-  {id:'ax_fortress',name:'RUNE: Stone Resolve',rarity:'axiom',tags:['Axiom','Bulwark','Shield'],icon:'🏯',desc:'While Shield is high (≥20% Max HP), it absorbs entire hits (no spillover).',effects:[{t:'passive',k:'axiomFortress',v:true}]},
-  {id:'ax_kinetic',name:'RUNE: Storm-Edge',rarity:'axiom',tags:['Axiom','Crit','Tempo'],icon:'💠',desc:'Every 10 SPD = +2% Crit Chance.',effects:[{t:'passive',k:'axiomKinetic',v:true}]},
+  {id:'ax_fortress',name:'RUNE: Stone Resolve',rarity:'axiom',tags:['Axiom','Bulwark','Shield'],icon:'🏯',desc:'While Shield is very high (≥30% Max HP), it absorbs a full hit (2s cooldown).',effects:[{t:'passive',k:'axiomFortress',v:true}]},
+  {id:'ax_kinetic',name:'RUNE: Storm-Edge',rarity:'axiom',tags:['Axiom','Crit','Tempo'],icon:'💠',desc:'Speed grants Crit Chance (up to +20%).',effects:[{t:'passive',k:'axiomKinetic',v:true}]},
   {id:'ax_plague',name:'RUNE: Eitr Thread',rarity:'axiom',tags:['Axiom','Poison','Bleed'],icon:'🦠',desc:'Status effects last 60% longer.',effects:[{t:'passive',k:'axiomPlague',v:1.6}]},
   {id:'ax_mirror',name:'RUNE: Mirror Law',rarity:'axiom',tags:['Axiom','Thorns'],icon:'🪞',desc:'22% of post-shield HP damage is reflected (max 20/hit).',effects:[{t:'passive',k:'axiomMirror',v:.22}]},
   {id:'ax_hunger_law',name:'RUNE: Hunger Law',rarity:'axiom',tags:['Axiom','Execute','Arcane'],icon:'🦷',desc:'Attacks against enemies below 50% HP ignore Shield.',effects:[{t:'passive',k:'axiomHungerLaw',v:true}]},
