--- a/games/runesaga.html
+++ b/games/runesaga.html
@@ -924,7 +924,7 @@ const BOONS=[
   {id:'guard_mark',name:"Guardian's Mark",rarity:'uncommon',tags:['Bulwark','Sustain'],icon:'✨',desc:'+45 Max HP, +10 Defense.',effects:[{t:'stat',s:'maxHP',v:45},{t:'stat',s:'hp',v:45},{t:'stat',s:'def',v:10}]},
 
   {id:'necrotic',name:'Corpse-Rot',rarity:'rare',tags:['Poison'],icon:'🧟',desc:'Each Poison stack reduces enemy DEF by 3.',effects:[{t:'passive',k:'necroticPoison',v:3}]},
-  {id:'vanguard',name:'Vanguard',rarity:'rare',tags:['Bulwark','Shield'],icon:'🛡',desc:'Taking damage grants 10 Shield.',effects:[{t:'onDmg',ef:'shield',amt:10}]},
+  {id:'vanguard',name:'Vanguard',rarity:'rare',tags:['Bulwark','Shield'],icon:'🛡',desc:'Taking HP damage grants 8 Shield.',effects:[{t:'onDmg',ef:'shield',amt:8}]},
   {id:'rampage',name:'Rampage',rarity:'rare',tags:['Execute','Tempo'],icon:'😤',desc:'Each kill grants +7 ATK (this battle).',effects:[{t:'onKill',ef:'tempStat',s:'atk',v:7}]},
   {id:'soul_rend',name:'Spirit Rend',rarity:'rare',tags:['Arcane'],icon:'👻',desc:'22% of damage bypasses enemy Defense.',effects:[{t:'passive',k:'defpen',v:.22}]},
   {id:'overwhelming',name:'Crusher',rarity:'rare',tags:['Crit','Arcane'],icon:'💪',desc:'Crits ignore 55% of enemy Defense.',effects:[{t:'passive',k:'critDefpen',v:.55}]},
@@ -941,18 +941,18 @@ const BOONS=[
   {id:'undying',name:'Undying',rarity:'epic',tags:['Sustain'],icon:'🔄',desc:'Once per battle, revive with 35% HP.',effects:[{t:'passive',k:'undying',v:true}]},
 
   {id:'chain_lightning',name:"Thor's Lash",rarity:'legendary',tags:['Arcane','Tempo'],icon:'⚡',desc:'Crits splash 55% dmg to a random other enemy.',effects:[{t:'onCrit',ef:'splash',v:.55}]},
-  {id:'eternal_hunger',name:'Eternal Hunger',rarity:'legendary',tags:['Sustain','Execute'],icon:'🌑',desc:'+30% Lifesteal. Overhealing becomes Shield.',effects:[{t:'stat',s:'lifesteal',v:.30},{t:'passive',k:'overhealShield',v:true}]},
+  {id:'eternal_hunger',name:'Eternal Hunger',rarity:'legendary',tags:['Sustain','Execute'],icon:'🌑',desc:'+18% Lifesteal. Overheal converts to Shield (60%, capped/battle).',effects:[{t:'stat',s:'lifesteal',v:.18},{t:'passive',k:'overhealShield',v:true}]},
 
   {id:'ax_opening',name:'RUNE: First Blood',rarity:'axiom',tags:['Axiom','Crit'],icon:'💫',desc:'First hit each battle always crits.',effects:[{t:'passive',k:'axiomOpen',v:true}]},
-  {id:'ax_aegis',name:'RUNE: Shield Law',rarity:'axiom',tags:['Axiom','Shield','Sustain'],icon:'💎',desc:'Overhealing becomes Shield.',effects:[{t:'passive',k:'overhealShield',v:true}]},
+  {id:'ax_aegis',name:'RUNE: Shield Law',rarity:'axiom',tags:['Axiom','Shield','Sustain'],icon:'💎',desc:'Overhealing becomes Shield (60% conversion, capped per battle).',effects:[{t:'passive',k:'overhealShield',v:true}]},
   {id:'ax_crimson',name:'RUNE: Crimson Law',rarity:'axiom',tags:['Axiom','Bleed'],icon:'🩸',desc:'Applying Bleed also applies Weak.',effects:[{t:'passive',k:'axiomCrimson',v:true}]},
   {id:'ax_ghost',name:'RUNE: Shade-Step',rarity:'axiom',tags:['Axiom','Tempo'],icon:'👻',desc:'When you dodge, gain +2 Tempo stacks.',effects:[{t:'onDodge',ef:'status',st:'tempo',sk:2,dur:9999}]},
   {id:'ax_echo',name:'RUNE: Echo Strike',rarity:'axiom',tags:['Axiom','Tempo'],icon:'🔁',desc:'Every 4th attack repeats at 40% power.',effects:[{t:'passive',k:'axiomEcho',v:4}]},
   {id:'ax_iron_law',name:'RUNE: Iron Law',rarity:'axiom',tags:['Axiom','Bulwark'],icon:'⚖',desc:'20% of your Defense adds to Attack (max +12).',effects:[{t:'passive',k:'axiomIronLaw',v:.20}]},
-  {id:'ax_harvest',name:'RUNE: Death Harvest',rarity:'axiom',tags:['Axiom','Sustain'],icon:'⚗',desc:'Kills restore 20% Max HP.',effects:[{t:'onKill',ef:'healPct',v:.20}]},
+  {id:'ax_harvest',name:'RUNE: Death Harvest',rarity:'axiom',tags:['Axiom','Sustain'],icon:'⚗',desc:'Kills restore 12% Max HP.',effects:[{t:'onKill',ef:'healPct',v:.12}]},
   {id:'ax_wrath',name:'RUNE: Berserkr Law',rarity:'axiom',tags:['Axiom','Crit'],icon:'🔥',desc:'Crits grant Rage stacks (+3 ATK each, max 15).',effects:[{t:'onCrit',ef:'status',st:'rage',sk:1,dur:9999,mx:15}]},
-  {id:'ax_fortress',name:'RUNE: Stone Resolve',rarity:'axiom',tags:['Axiom','Bulwark','Shield'],icon:'🏯',desc:'While Shield is high (≥20% Max HP), it absorbs entire hits (no spillover).',effects:[{t:'passive',k:'axiomFortress',v:true}]},
-  {id:'ax_kinetic',name:'RUNE: Storm-Edge',rarity:'axiom',tags:['Axiom','Crit','Tempo'],icon:'💠',desc:'Every 10 SPD = +2% Crit Chance.',effects:[{t:'passive',k:'axiomKinetic',v:true}]},
+  {id:'ax_fortress',name:'RUNE: Stone Resolve',rarity:'axiom',tags:['Axiom','Bulwark','Shield'],icon:'🏯',desc:'While Shield is very high (≥30% Max HP), it absorbs full hits (2s cooldown).',effects:[{t:'passive',k:'axiomFortress',v:true}]},
+  {id:'ax_kinetic',name:'RUNE: Storm-Edge',rarity:'axiom',tags:['Axiom','Crit','Tempo'],icon:'💠',desc:'SPD grants Crit Chance (up to +20%).',effects:[{t:'passive',k:'axiomKinetic',v:true}]},
   {id:'ax_plague',name:'RUNE: Eitr Thread',rarity:'axiom',tags:['Axiom','Poison','Bleed'],icon:'🦠',desc:'Status effects last 60% longer.',effects:[{t:'passive',k:'axiomPlague',v:1.6}]},
   {id:'ax_mirror',name:'RUNE: Mirror Law',rarity:'axiom',tags:['Axiom','Thorns'],icon:'🪞',desc:'22% of post-shield HP damage is reflected (max 20/hit).',effects:[{t:'passive',k:'axiomMirror',v:.22}]},
   {id:'ax_hunger_law',name:'RUNE: Hunger Law',rarity:'axiom',tags:['Axiom','Execute','Arcane'],icon:'🦷',desc:'Attacks against enemies below 50% HP ignore Shield.',effects:[{t:'passive',k:'axiomHungerLaw',v:true}]},
@@ -2029,11 +2029,9 @@ function checkRagnarökUnlock() {
   const currentUnlocked = META.ragnarökTier || 0;
   if (currentActive < currentUnlocked) return;
 
-  const completedWave = G.wave;
-  const isVictory = G.phase === 'VICTORY';
-  const isRetireDeep = (completedWave >= 8);
-
-  if (!isVictory && !isRetireDeep) return;
+  const isVictory = (G.phase === 'VICTORY');
+  const isFullClear = isVictory && (typeof G.maxWaves === 'number') && (G.wave >= G.maxWaves);
+  if (!isFullClear) return;
 
   const newTier = Math.min(15, currentUnlocked + 1);
   if (newTier <= currentUnlocked) return;
@@ -2043,7 +2041,7 @@ function checkRagnarökUnlock() {
     G.hero.record.ragnarökStamp = newTier;
   }
   saveMeta();
-  addLog(`ᚢ The root darkens further. Ragnarök Tier ${newTier} — ${rootDepthLabel(newTier)} — unlocked.`, 'laxiom');
+  addLog(`ᚢ Ragnarök Tier Unlocked: ${newTier}`, 'laxiom');
 }
 
 
@@ -2194,12 +2192,18 @@ function mkEnemy(arch,wave,boss,opts){
   return enemy;
 }
 
+function heroShieldCap(){
+  const pct = heroHasShieldEquipped() ? 1.05 : 0.75;
+  return Math.floor(G.hero.maxHP * pct);
+}
+
 function addShieldToUnit(unit,amt,opts={}){
   let gain=Math.max(0,Math.floor(amt||0));
   if(unit===G.hero && !opts.bypassShieldPenalty && !heroHasShieldEquipped())gain=Math.floor(gain*0.50);
   if(gain<=0)return;
   if(!unit.statuses.shield)unit.statuses.shield={stacks:1,value:0,dur:9999};
   unit.statuses.shield.value+=gain;
+  if (unit === G.hero) unit.statuses.shield.value=Math.min(unit.statuses.shield.value, heroShieldCap());
 }
 function pickWaveTraitsByTrial(wave) {
   const cfg=TRIAL_CONFIG[wave]||{minorTraitsMin:0,minorTraitsMax:1,majorTraitsMax:0,allowEliteTrait:false};
@@ -2295,7 +2299,7 @@ function effectiveStats(){
   const h=G.hero;
   const s={atk:h.atk+(h.permStats.atk||0),def:h.def,spd:h.spd,critChance:h.critChance,critDmg:h.critDmg,lifesteal:h.lifesteal,evasion:h.evasion,accuracy:h.accuracy};
   const il=passive('axiomIronLaw');if(il)s.atk+=Math.min(12,Math.floor(s.def*il));
-  if(hasP('axiomKinetic'))s.critChance+=h.spd*.002;
+  if(hasP('axiomKinetic')) s.critChance += Math.min(0.20, h.spd * 0.0015);
 
   h.cursedMult=1;
   if(h.gear){
@@ -2430,13 +2434,20 @@ function heroDmg(rawDmg,attacker,src){
   if(hasTrait('tenacious')&&hero.hp<hero.maxHP*.25)incoming=Math.floor(incoming*.60);
   if(hero.statuses.vulnerable&&hero.statuses.vulnerable.dur>0)incoming=Math.floor(incoming*1.30);
 
+  const gen = (hero?.record?.gen || 1);
+  const miti = Math.min(0.20, Math.max(0, (gen - 1)) * 0.03);
+  hero.ancestralMitigation = miti;
+  if (miti > 0) incoming = Math.max(1, Math.floor(incoming * (1 - miti)));
+
   let hpDamage=0;
   const sh=hero.statuses.shield;
   if(sh&&sh.value>0){
-    if(hasP('axiomFortress') && sh.value>=Math.floor(hero.maxHP*0.20)){
-      addLog('  🏯 Stone Resolve: hit negated!','laxiom');
+    const fortressReady = hasP('axiomFortress') && sh.value >= Math.floor(hero.maxHP * 0.30) && !(hero.statuses && hero.statuses.fortressCD);
+    if(fortressReady){
+      addLog('  🏯 Stone Resolve: hit absorbed!','laxiom');
       sh.value=Math.max(0,sh.value-incoming);
       if(sh.value<=0){delete hero.statuses.shield;shieldBreak(attacker);}
+      hero.statuses.fortressCD={stacks:1,dur:2};
       hpDamage=0;
     }else{
       const abs=Math.min(sh.value,incoming);
@@ -2472,7 +2483,7 @@ function heroDmg(rawDmg,attacker,src){
     addLog('  🌬️ Second Wind! +'+heal,'laxiom');
     healHero(heal,'sw');
   }
-  trigBoon('onDmg',hero,attacker,{});
+  if (hpDamage > 0) trigBoon('onDmg',hero,attacker,{});
   return Math.min(hpDamage,prev);
 }
 
@@ -2484,13 +2495,31 @@ function shieldBreak(attacker){
 
 function healHero(amt,src){
   const h=G.hero;
-  const over=Math.max(0,(h.hp+amt)-h.maxHP);
   let mod=1;
   if(hasTrait&&hasTrait('shallow_breath'))mod*=0.80;
   if(hasTrait&&hasTrait('thin_margin')&&h.hp<h.maxHP*0.30)mod*=0.65;
   amt=Math.max(0,Math.floor(amt*mod));
-  h.hp=Math.min(h.maxHP,h.hp+amt);
-  if(over>0&&hasP('overhealShield')){addShieldToUnit(h,over);addLog(`  💎 Overheal → ${over} Shield!`,'laxiom');}
+  const over = Math.max(0, (h.hp + amt) - h.maxHP);
+  h.hp = Math.min(h.maxHP, h.hp + amt);
+
+  if (over > 0 && hasP('overhealShield')) {
+    const conv = 0.60;
+    const cap = (typeof h._overhealShieldCapThisBattle === 'number') ? h._overhealShieldCapThisBattle : Math.floor(h.maxHP * 0.60);
+    const gained = (typeof h._overhealShieldGained === 'number') ? h._overhealShieldGained : 0;
+    const remaining = Math.max(0, cap - gained);
+    const desired = Math.floor(over * conv);
+    const grant = Math.min(remaining, desired);
+    if (grant > 0) {
+      const before = h.statuses?.shield?.value || 0;
+      addShieldToUnit(h, grant);
+      const after = h.statuses?.shield?.value || 0;
+      const actual = Math.max(0, after - before);
+      h._overhealShieldGained = gained + actual;
+      if (actual > 0) addLog(`  💎 Overheal → ${actual} Shield`,'laxiom');
+      if (remaining <= actual) addLog('  ⛓️ Overheal shield capped this battle.','lstatus');
+    }
+  }
+
   if(amt>0&&src!=='ls'&&src!=='regen')addLog(`  💚 Healed ${amt} HP`,'lheal');
 }
 
@@ -2597,6 +2626,8 @@ function startBattle(){
   h.flags.secondWindUsed=false;
   h._firstFuryUsedThisBattle=false;
   h._attackedThisSecond=false;
+  h._overhealShieldGained = 0;
+  h._overhealShieldCapThisBattle = Math.floor(h.maxHP * (heroHasShieldEquipped() ? 0.85 : 0.55));
   applyWaveTraitsToEnemies();
   applyBattleStartBoons();
   if(heroHasShieldEquipped()&&carryShield>0)addShieldToUnit(h,carryShield,{bypassShieldPenalty:true});
@@ -3079,23 +3110,35 @@ function checkLevelUp(){
 }
 
 // ─── RETIRE FLOW ─────────────────────────────────────────────────────────────
-function computeEarnedEVs(){
-  return{
-    hp:Math.min(8,Math.max(0,Math.floor((G.wave-1)*0.8))),
-    atk:Math.min(8,Math.max(0,Math.floor((G.wave-1)*0.7))),
-    def:Math.min(6,Math.max(0,Math.floor((G.wave-1)*0.5))),
-    spd:Math.min(6,Math.max(0,Math.floor((G.wave-1)*0.4))),
-    crit:Math.min(5,Math.max(0,Math.floor(G.level*0.6))),
-    eva:Math.min(4,Math.max(0,Math.floor(G.level*0.3))),
-    acc:Math.min(4,Math.max(0,Math.floor(G.level*0.3))),
-    ls:Math.min(3,Math.max(0,Math.floor(G.level*0.2))),
+function computeEarnedEVs(trialOverride){
+  const t = (typeof trialOverride === 'number') ? trialOverride : (G?.wave || 1);
+  const lvl = (G?.level || 1);
+  const gen = (G?.hero?.record?.gen || 1);
+  const tier = (G?.ragnarökActive || 0);
+
+  const progress = Math.max(0, t - 1);
+  const tierMult = 1 + (tier * 0.22);
+  const genMult  = 1 + Math.min(0.80, (gen-1)*0.12);
+  const s = (progress * 1.4 + lvl * 1.0) * tierMult * genMult;
+
+  const clamp = (x,a,b)=>Math.max(a, Math.min(b, Math.floor(x)));
+
+  return {
+    hp:   clamp(s * 0.85, 0, 26),
+    atk:  clamp(s * 0.65, 0, 20),
+    def:  clamp(s * 0.55, 0, 18),
+    spd:  clamp(s * 0.60, 0, 20),
+    crit: clamp(lvl * 0.9 + tier * 0.8, 0, 12),
+    eva:  clamp(lvl * 0.55 + progress * 0.22, 0, 10),
+    acc:  clamp(lvl * 0.50 + progress * 0.20, 0, 10),
+    ls:   clamp(lvl * 0.35 + tier * 0.25, 0, 8),
   };
 }
 
 function retireHero(trialOverride){
   const rec=G.hero.record;
-  const earnedEVs=computeEarnedEVs();
   const trial=(typeof trialOverride==='number')?trialOverride:G.wave;
+  const earnedEVs=computeEarnedEVs(trial);
   rec.runResult={
     outcome:'retired',wave:trial,
     boons:G.boons.map(b=>b.id),
@@ -3173,7 +3216,7 @@ function showRetireSummary(rec,essence,earnedEVs){
       ${EV_KEYS.map(k=>`<div class="srow"><span class="sl">${k.toUpperCase()}_EV</span><span class="sv">${ev[k]||0} / ${evCap()}</span></div>`).join('')}
       ${rec.traits.length?`<div style="margin-top:8px;display:flex;flex-wrap:wrap;gap:3px">${rec.traits.map(tk=>{const gt=GTRAITS[tk];return gt?`<span class="gtrait">${gt.icon} ${gt.name}</span>`:''}).join('')}</div>`:''}
     </div>
-    <div style="color:var(--green);font-size:13px;margin-bottom:16px">+${essence} Minni added to lineage coffers.</div>
+    <div style="color:var(--green);font-size:13px;margin-bottom:16px">+${essence} Minni added to lineage coffers.</div><div style="font-size:10px;color:var(--txt3);margin-bottom:10px">Ragnarök tiers unlock only on full victory (Trial 12 clear).</div>
     <div style="margin:0 0 14px">
       <label style="font-size:11px;color:var(--txt3);display:block;margin-bottom:6px;letter-spacing:1px;text-transform:uppercase">Difficulty (enemy stats)</label>
       <div style="display:flex;align-items:center;gap:10px">
@@ -3292,7 +3335,7 @@ function pickBoon(id){
     const rec=G.hero.record;
     rec.runResult={outcome:'victory',wave:G.wave,boons:G.boons.map(b=>b.id),axioms:G.boons.filter(b=>b.rarity==='axiom').map(b=>b.id),level:G.level,ts:Date.now()};
     assignBreedUses(rec, 2);
-    const earnedEVs=computeEarnedEVs();
+    const earnedEVs=computeEarnedEVs(G.wave);
     EV_KEYS.forEach(k=>rec.evs[k]=Math.min(evCap(),(rec.evs[k]||0)+(earnedEVs[k]||0)));
     META.family[rec.id]=rec;
     if(META.retiredPool.length>=poolMax())META.retiredPool.shift();
@@ -3395,6 +3438,7 @@ function renderHero(){
     <div class="srow"><span class="sl">⚔ ATK</span><span class="sv">${atkStr}</span></div>
     <div class="srow"><span class="sl">🛡 DEF</span><span class="sv">${Math.round(h.def)}</span></div>
     <div class="srow"><span class="sl">ℹ Shield</span><span class="sv" style="font-size:10px">Shield carryover requires a Shield offhand.</span></div>
+    ${h.ancestralMitigation?`<div class="srow"><span class="sl">🧬 Ancestral Mitigation</span><span class="sv">${Math.round(h.ancestralMitigation*100)}%</span></div>`:''}
     <div class="srow"><span class="sl">⚡ SPD</span><span class="sv">${Math.round(h.spd)}</span></div>
     <div class="srow"><span class="sl">🎯 Crit</span><span class="sv">${Math.round(es.critChance*100)}% / ${Math.round(es.critDmg*100)}%</span></div>
     <div class="srow"><span class="sl">💃 Eva</span><span class="sv">${Math.round(h.evasion*100)}%</span></div>
@@ -4580,7 +4624,7 @@ function showRoadsideFire(){
 
 function showRetireConfirm(){
   const rec=G.hero.record;
-  const earnedEVs=computeEarnedEVs();
+  const earnedEVs=computeEarnedEVs(G.wave);
   let html=`
     <div style="font-family:'Orbitron',sans-serif;font-size:16px;font-weight:900;color:var(--gold);margin-bottom:8px">🏛 BIND THIS MEMORY STONE?</div>
     <p style="color:var(--txt2);font-size:12px;margin-bottom:14px">End your saga at Trial ${G.wave} and add <strong style="color:var(--gold)">${rec?.name||'your hero'}</strong> to the Memory Stones for future memory binding.</p>
@@ -5921,7 +5965,6 @@ function startFirstHero(){
   const _retireHero = retireHero;
   retireHero = function(){
     try{ awardAspectXPFromRun('retired'); }catch(e){}
-    try{ checkRagnarökUnlock(); }catch(e){}
     _retireHero();
     // ensure persisted
     try{ saveMeta(); }catch(e){}
