Rename Minni-Holl top ribbon tab labels

--- a/games/runesaga.html
+++ b/games/runesaga.html
@@ -818,9 +818,9 @@ table.br-table{width:100%;border-collapse:collapse;font-size:10px;}
     <span style="font-family:'Orbitron',sans-serif;font-size:14px;font-weight:900;color:var(--gold);letter-spacing:2px;text-shadow:0 0 12px rgba(212,160,23,.4)">ᛟ MINNI-HÖLL</span>
     <div style="width:1px;height:20px;background:var(--border2)"></div>
     <div class="legacy-tabs">
-      <div class="ltab active" id="ltab-pool" onclick="setLegacyTab('pool')">Active Stones</div>
-      <div class="ltab" id="ltab-breed" onclick="setLegacyTab('breed')">BIND</div>
-      <div class="ltab" id="ltab-fallen" onclick="setLegacyTab('fallen')">SCARRED RUNES</div>
+      <div class="ltab active" id="ltab-pool" onclick="setLegacyTab('pool')">Retired Heroes</div>
+      <div class="ltab" id="ltab-breed" onclick="setLegacyTab('breed')">Memory Binding</div>
+      <div class="ltab" id="ltab-fallen" onclick="setLegacyTab('fallen')">Fallen Heroes</div>
       <div class="ltab" id="ltab-tree" onclick="setLegacyTab('tree')">Family Tree</div>
       <div class="ltab" id="ltab-upgrades" onclick="setLegacyTab('upgrades')">Runesmith</div>
       <div class="ltab" id="ltab-codex" onclick="setLegacyTab('codex')">📖 Codex</div>
