--- a/games/runesaga.html
+++ b/games/runesaga.html
@@ -1064,13 +1064,144 @@ function gearCost(item){
   return (base[item.rarity]||15)+Math.floor((item.notches||0)*-1.5);
 }
 function rarityColor(rarity){
-  const map={common:'#6060a0',uncommon:'#50a050',rare:'#6060d8',epic:'#a040c0',legendary:'var(--gold)',axiom:'#d050ff'};
+  const map={common:'#6060a0',uncommon:'#50a050',rare:'#6060d8',epic:'#a040c0',legendary:'var(--gold)',axiom:'#d050ff',forged:'#a040c0'};
   return map[rarity]||'#888';
 }
 function rarityBorderColor(rarity){
   const map={common:'#3a3a5a',uncommon:'#2a5a2a',rare:'#2a2a7a',epic:'#5a2a7a',legendary:'#7a5a00',axiom:'#7a20b0'};
   return map[rarity]||'var(--border2)';
 }
+
+function formatAffixLabel(stat,value){
+  const n=(typeof value==='number')?value:0;
+  if(stat==='atk')return `+${Math.round(n)} ATK`;
+  if(stat==='def')return `+${Math.round(n)} DEF`;
+  if(stat==='maxHP')return `+${Math.round(n)} Max HP`;
+  if(stat==='spd')return `+${Math.round(n)} SPD`;
+  if(stat==='critChance')return `+${(n*100).toFixed(1).replace(/\.0$/,'')}% Crit`;
+  if(stat==='critDmg')return `+${(n*100).toFixed(1).replace(/\.0$/,'')}% Crit DMG`;
+  if(stat==='lifesteal')return `+${(n*100).toFixed(1).replace(/\.0$/,'')}% Lifesteal`;
+  if(stat==='evasion')return `+${(n*100).toFixed(1).replace(/\.0$/,'')}% Evasion`;
+  if(stat==='accuracy')return `+${(n*100).toFixed(1).replace(/\.0$/,'')}% Accuracy`;
+  return `${stat}: ${n}`;
+}
+
+let FORGE_STATE={selectedEtchings:[],targetHeroId:null};
+function mkEtchingId(){return 'etch_'+Date.now().toString(36)+'_'+Math.floor(Math.random()*1e6).toString(36);} // naming-only randomness
+function getForgeEligibleHeroes(){
+  const inPool=(META.retiredPool||[]).map(id=>META.family[id]).filter(r=>r&& !isFallenHero(r.id));
+  if(inPool.length)return inPool;
+  return Object.values(META.family||{}).filter(r=>r&&r.runResult&&['retired','victory'].includes(r.runResult.outcome)&&!isFallenHero(r.id));
+}
+function toggleForgeEtching(id){
+  const arr=FORGE_STATE.selectedEtchings||[];
+  const idx=arr.indexOf(id);
+  if(idx>=0)arr.splice(idx,1);
+  else{if(arr.length>=3)return;arr.push(id);}
+  FORGE_STATE.selectedEtchings=arr;
+  setLegacyTab('upgrades');
+}
+function setForgeTargetHero(id){FORGE_STATE.targetHeroId=id||null;setLegacyTab('upgrades');}
+
+function dismantleBequeathedWeapon(heroId){
+  const rec=META.family?.[heroId];if(!rec)return;
+  rec.equippedGear=rec.equippedGear||{};
+  const item=rec.equippedGear.weapon;
+  if(!item)return;
+  if(META.salvage<25){alert('Not enough Rune-Shards.');return;}
+  if(!confirm(`Dismantle ${item.name}? The weapon will be destroyed and its runes stored as Etchings.`))return;
+  META.salvage-=25;
+  META.etchings=META.etchings||[];
+  (item.affixes||[]).forEach(aff=>{
+    META.etchings.push({
+      id:mkEtchingId(),
+      stat:aff.stat,
+      value:aff.value,
+      label:aff.label||formatAffixLabel(aff.stat,aff.value),
+      source:{
+        fromHeroId:rec.id,
+        fromHeroName:rec.name,
+        fromItemName:item.name,
+        fromSlot:'weapon',
+        fromRarity:item.rarity,
+      },
+      createdAt:Date.now(),
+    });
+  });
+  rec.equippedGear.weapon=null;
+  saveMeta();
+  updateMetaHeader();
+  showHeroDetail(heroId);
+}
+
+function generateForgedWeaponName(etchings){
+  const top=(etchings||[])[0]?.stat||'atk';
+  const pref=(['critChance','critDmg','accuracy'].includes(top)?'Keen':top==='lifesteal'?'Blood':(['maxHP','def'].includes(top)?'Ward':(['spd','evasion'].includes(top)?'Gale':(top==='atk'?'Fang':'Runed'))));
+  const bases=['Seax','Axe','Spear','Blade','Glaive'];
+  const epis=['of the Root','of May Be','of the Deep Trial','of Skuld’s Debt','of the Cold Forge'];
+  return `${pref} ${rpick(bases)} ${rpick(epis)}`;
+}
+
+function forgeWeaponFromEtchings(selectedEtchingIds,targetHeroId){
+  const ids=(selectedEtchingIds||[]).slice();
+  if(ids.length<2||ids.length>3){alert('Select 2 or 3 Etchings.');return;}
+  const etchs=ids.map(id=>(META.etchings||[]).find(e=>e.id===id)).filter(Boolean);
+  if(etchs.length!==ids.length){alert('Some selected Etchings were not found.');return;}
+  const stats=etchs.map(e=>e.stat);
+  if(new Set(stats).size!==stats.length){alert('Cannot forge: duplicate rune types selected.');return;}
+  const rec=META.family?.[targetHeroId];
+  if(!rec){alert('Choose a valid Memory Stone.');return;}
+  if(META.legacyEssence<40||META.salvage<60){alert('Not enough resources to forge.');return;}
+  rec.equippedGear=rec.equippedGear||{};
+  if(rec.equippedGear.weapon){if(!confirm(`Replace existing weapon on ${rec.name}?`))return;}
+
+  META.legacyEssence-=40; META.salvage-=60;
+  const weapon={
+    slot:'weapon',rarity:'forged',name:generateForgedWeaponName(etchs),sundered:true,notches:0,
+    affixes:etchs.map(e=>({stat:e.stat,value:e.value,label:e.label||formatAffixLabel(e.stat,e.value)})),
+    sagaHistory:[],forgedBy:'etchings',forgedByName:'Forge Anvil',passiveBonus:null,isShield:false
+  };
+  META.etchings=(META.etchings||[]).filter(e=>!ids.includes(e.id));
+  rec.equippedGear.weapon=weapon;
+  FORGE_STATE.selectedEtchings=[];
+  FORGE_STATE.targetHeroId=targetHeroId;
+  saveMeta();
+  updateMetaHeader();
+  setLegacyTab('upgrades');
+  alert(`Forged: ${weapon.name} (Sundered)`);
+}
+
+function forgeWeaponFromCurrentSelection(){
+  forgeWeaponFromEtchings(FORGE_STATE.selectedEtchings||[], FORGE_STATE.targetHeroId||null);
+}
+
+function renderForgeAnvil(){
+  const etchings=META.etchings||[];
+  const selected=(FORGE_STATE.selectedEtchings||[]).map(id=>etchings.find(e=>e.id===id)).filter(Boolean);
+  const eligible=getForgeEligibleHeroes();
+  if(!FORGE_STATE.targetHeroId && eligible[0])FORGE_STATE.targetHeroId=eligible[0].id;
+  const stats=selected.map(e=>e.stat);
+  const uniqueStats=(new Set(stats)).size===stats.length;
+  const canCount=selected.length>=2&&selected.length<=3;
+  const canRes=META.legacyEssence>=40&&META.salvage>=60;
+  const canTarget=!!(FORGE_STATE.targetHeroId&&META.family[FORGE_STATE.targetHeroId]);
+  const canForge=canCount&&uniqueStats&&canRes&&canTarget;
+
+  return `<div style="margin-top:20px;border-top:1px solid var(--border);padding-top:16px">
+    <div style="font-size:14px;font-weight:700;margin-bottom:6px;color:var(--violet)">🔥 Forge Anvil</div>
+    <div style="font-size:11px;color:var(--txt3);margin-bottom:8px">Fuse stored Etchings into a new weapon. Forged weapons begin Sundered.</div>
+    <div style="font-size:10px;color:var(--txt3);margin-bottom:10px">Etchings: ${etchings.length} | Minni: ${META.legacyEssence} | ᚱ: ${META.salvage}</div>
+    <div style="display:flex;flex-wrap:wrap;gap:6px;margin-bottom:8px;max-height:160px;overflow:auto;padding:6px;border:1px solid var(--border2);border-radius:6px;background:var(--bg2)">
+      ${etchings.length?etchings.map(e=>{const sel=selected.some(s=>s.id===e.id);return `<button class="btn btn-sm ${sel?'btn-gold':'btn-ghost'}" style="max-width:100%;text-overflow:ellipsis;overflow:hidden;white-space:nowrap" onclick="toggleForgeEtching('${e.id}')" title="${e.source?.fromItemName||'Unknown'} — ${e.source?.fromHeroName||'Unknown'}">${e.label||formatAffixLabel(e.stat,e.value)} (${e.source?.fromItemName||'item'} — ${e.source?.fromHeroName||'hero'})</button>`;}).join(''):`<div style="font-size:10px;color:var(--txt3)">No Etchings stored yet. Dismantle a bequeathed weapon first.</div>`}
+    </div>
+    <div style="font-size:10px;color:var(--txt2);margin-bottom:8px">Selected: ${selected.map(e=>e.label||formatAffixLabel(e.stat,e.value)).join(' · ')||'none'}${!uniqueStats&&selected.length?`<span style="color:var(--red)"> · Duplicate rune types selected</span>`:''}</div>
+    <div style="font-size:10px;color:var(--txt3);margin-bottom:8px">Fuse Cost: Minni 40 · ᚱ60</div>
+    <div style="font-size:10px;color:var(--txt3);margin-bottom:4px">Bind to Memory Stone:</div>
+    ${eligible.length?`<select onchange="setForgeTargetHero(this.value)" style="width:100%;max-width:340px;background:var(--bg2);border:1px solid var(--border2);color:var(--txt);padding:6px;border-radius:4px;margin-bottom:10px">${eligible.map(r=>`<option value="${r.id}" ${FORGE_STATE.targetHeroId===r.id?'selected':''}>${r.name} (Gen ${r.gen})</option>`).join('')}</select>`:`<div style="font-size:10px;color:var(--txt3);margin-bottom:10px">No eligible Memory Stones available.</div>`}
+    <button class="btn btn-primary btn-sm ${canForge?'':'sb-disabled'}" onclick="${canForge?`forgeWeaponFromCurrentSelection()`:`alert('${!canCount?'Select 2–3 Etchings first.':(!uniqueStats?'Cannot forge: duplicate rune types selected.':(!canRes?'Not enough Minni or Rune-Shards.':'Choose a valid Memory Stone.'))}')`}">🔥 Forge Weapon</button>
+  </div>`;
+}
+
 function genForgeStallItem(wave){
   const rw={common:40,uncommon:25,rare:15,epic:8,legendary:3,axiom:1};
   const boost=Math.min(wave,10);
@@ -1626,6 +1757,7 @@ let META={
   codexUnlocked:['weaver','minni','yggdrasil','allfather','valhalla','saga','rune','norns'],
   codexView:'lore',
   bindingCounter:0,
+  etchings:[],
 };
 
 function saveMeta(){
@@ -1647,6 +1779,7 @@ function loadMeta(){
     if(!META.codexUnlocked||!Array.isArray(META.codexUnlocked))META.codexUnlocked=['yggdrasil','allfather','valhalla','saga','rune','norns'];
     if(META.codexView!=='balance')META.codexView='lore';
     if(typeof META.bindingCounter!=='number')META.bindingCounter=0;
+    if(!Array.isArray(META.etchings))META.etchings=[];
   }catch(e){}
 }
 function exportSave(){
@@ -4385,10 +4518,13 @@ function showHeroDetail(id){
       <div style="margin-top:10px;border-top:1px solid var(--border);padding-top:8px">
         <div style="font-size:9px;color:var(--txt3);letter-spacing:2px;margin-bottom:5px">BEQUEATHED GEAR</div>
         ${gearItems.map(([slot,item])=>`
-          <div style="font-size:10px;color:${rarityColor(item.rarity)};margin:3px 0">
-            ⚒ ${item.name}
-            ${item.sagaHistory?.length?`<span style="color:var(--txt3);font-style:italic"> — "${item.sagaHistory[item.sagaHistory.length-1]}"</span>`:''}
-            ${item.passiveBonus?`<span style="color:var(--green)"> · ${item.passiveBonus.label}</span>`:''}
+          <div style="font-size:10px;color:${rarityColor(item.rarity)};margin:4px 0;display:flex;justify-content:space-between;gap:8px;align-items:center">
+            <div>
+              ⚒ ${item.name}
+              ${item.sagaHistory?.length?`<span style="color:var(--txt3);font-style:italic"> — "${item.sagaHistory[item.sagaHistory.length-1]}"</span>`:''}
+              ${item.passiveBonus?`<span style="color:var(--green)"> · ${item.passiveBonus.label}</span>`:''}
+            </div>
+            ${slot==='weapon'?`<button class="btn btn-sm btn-ghost" title="Destroy this weapon to extract its runes (affixes) into Etchings." onclick="dismantleBequeathedWeapon('${rec.id}')" ${item?'':'disabled'}>⚒ Dismantle</button>`:''}
           </div>
         `).join('')}
       </div>
@@ -4606,6 +4742,7 @@ function renderRunesmith(){
         }).join('')}
       </div>`;
   }
+  h+=renderForgeAnvil();
   h+=`<div style="margin-top:20px;border-top:1px solid var(--border);padding-top:16px">
       <div style="font-size:14px;font-weight:700;margin-bottom:10px;color:var(--amber)">💾 Save Data</div>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
@@ -4635,7 +4772,7 @@ function doResetMeta(){
   localStorage.removeItem(META_KEY);
   META={legacyEssence:0,salvage:0,retiredPool:[],fallenLedger:[],family:{},upgrades:{evCap:0,imprintChance:0,poolSize:0,mutationRate:0,nursery:0},
     unlockedTraits:new Set(['serrated','aegis','skirmisher','venomkiss','gambler','spite','ironblood','swift_born','lucky','resilient']),nextHeroId:1,
-    ragnarökTier:0,ragnarökActive:0,eliteRoster:{},relics:0,hasSeenOpening:false,houseName:null,aspects:{},scarTokens:{},codexUnlocked:['weaver','minni','yggdrasil','allfather','valhalla','saga','rune','norns']};
+    ragnarökTier:0,ragnarökActive:0,eliteRoster:{},relics:0,hasSeenOpening:false,houseName:null,aspects:{},scarTokens:{},codexUnlocked:['weaver','minni','yggdrasil','allfather','valhalla','saga','rune','norns'],etchings:[]};
   saveMeta();setLegacyTab('upgrades');updateMetaHeader();
 }
 
@@ -5279,6 +5416,7 @@ function normalizeMeta(){
   if(!META.codexUnlocked||!Array.isArray(META.codexUnlocked))META.codexUnlocked=['yggdrasil','allfather','valhalla','saga','rune','norns'];
   if(META.codexView!=='balance') META.codexView='lore';
   if(typeof META.bindingCounter!=='number') META.bindingCounter=0;
+  if(!Array.isArray(META.etchings)) META.etchings=[];
   for(const k of Object.keys(META.scarTokens)){
     META.scarTokens[k] = Math.max(0, Math.floor(META.scarTokens[k]||0));
     if(META.scarTokens[k] <= 0) delete META.scarTokens[k];
